--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <div class="logo-icon">📚</div>
     <h1>Learning Tools</h1>
   </div>
-  <p class="subtitle">Raccolta di risorse educative per maker, coding & STEAM</p>
+  <p class="subtitle">Raccolta di risorse STEAM per educators, teachers, makers, </p>
   <div class="search-wrap">
     <input type="text" id="search" placeholder="Cerca una risorsa o categoria…" />
   </div>
@@ -355,7 +355,7 @@
 </div>
 
 <footer>
-  Learning Tools &mdash; Risorse aggiornate per l'educazione digitale &amp; STEAM
+  by:  <a href="https://www.adrianoparracciani.it/" target="_blank" > Adriano Parracciani</a>
 </footer>
 
 <script>
