--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
 // ═══════════════════════════════════════════════════════
 //  ⚙️  CONFIGURA QUESTI DUE VALORI prima di pubblicare
 // ═══════════════════════════════════════════════════════
-const GH_OWNER     = 'TUO-USERNAME';    // es. 'mariorossi'
-const GH_REPO      = 'TUO-REPOSITORY'; // es. 'learning-tools'
+const GH_OWNER     = 'cyberparra';    // es. 'mariorossi'
+const GH_REPO      = 'cyberparra/Learning-ToolsSITORY'; // es. 'learning-tools'
 const GH_FILE_PATH = 'data.json';
 const GH_BRANCH    = 'main';
 
