--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 //  ⚙️  CONFIGURA QUESTI DUE VALORI prima di pubblicare
 // ═══════════════════════════════════════════════════════
 const GH_OWNER     = 'cyberparra';    // es. 'mariorossi'
-const GH_REPO      = 'cyberparra/Learning-Tools'; // es. 'learning-tools'
+const GH_REPO      = 'Learning-Tools'; // es. 'learning-tools'
 const GH_FILE_PATH = 'data.json';
 const GH_BRANCH    = 'main';
 
